<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.colorcoding.ibas</groupId>
  <artifactId>bobas.businessobjectscommon.parent</artifactId>
  <version>0.2.0</version>
  <packaging>pom</packaging>
  <name>bobas.businessobjectscommon.parent</name>
  <url>https://colorcoding.org/ibas/bobas</url>
  <organization>
    <name>Color-Coding Studio</name>
    <url>https://colorcoding.org</url>
  </organization>
  <developers>
    <developer>
      <name>Niuren.Zhu</name>
      <organization>Color-Coding Studio</organization>
      <organizationUrl>https://colorcoding.org/</organizationUrl>
      <url>https://colorcoding.org/niurenzhu</url>
    </developer>
  </developers>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.compiler.version>3.15.0</maven.compiler.version>
    <maven.jar.version>3.5.1</maven.jar.version>
    <maven.source.version>3.4.0</maven.source.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.version}</version>
        <configuration>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven.source.version}</version>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>ibas-maven</id>
      <name>Color-Coding Maven Repository</name>
      <url>https://maven.colorcoding.org/repository/maven-public/</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
